--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && cp -r out/** ."
+    "deploy": "next build && gh-pages -d out"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
